ready for npm bin publish

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "BSD-2-Clause",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "tsc-macro": "dist/cli.js"
+  },
   "scripts": {
     "test": "npm run rawtest",
     "clean": "rimraf node_modules/@beenotung/tslib/index.* dist",
