--- a/examples/package.json
+++ b/examples/package.json
@@ -5,21 +5,24 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc-macro",
-    "pretest": "npm run build",
-    "test": "jest"
+    "test": "run-s build mocha",
+    "mocha": "ts-mocha \"test/*.spec.ts\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "tsc-macro": "file:..",
-    "tslib": "^2.0.1"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.6.0",
-    "jest": "^26.1.0",
-    "ts-jest": "^26.1.2",
-    "typescript": "^3.7.3"
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^14.18.13",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2",
+    "npm-run-all": "^4.1.5",
+    "ts-mocha": "^9.0.2",
+    "typescript": "^3.9.10"
   }
 }
