--- a/package.json
+++ b/package.json
@@ -40,21 +40,15 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@beenotung/tslib": "^19.0.0",
-    "typescript": "^4.6.3"
+    "@beenotung/tslib": "^24.0.0",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@types/node": "*",
-    "format-json-cli": "^1.0.1",
-    "husky": "^7.0.4",
+    "@types/node": "^20.16.11",
+    "format-json-cli": "^1.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.7.0"
-  },
-  "husky": {
-    "hook": {
-      "pre-commit": "npm run format"
-    }
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2"
   }
 }
